Criando e exibindo modelo Usuario.

--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -7,12 +7,14 @@
 	<link rel="stylesheet" href="/lib/bootstrap5/dist/css/bootstrap.css">
 	<title>UsandoViews :: Index</title>
 </head>
-
 <body>
+	
 	<div class="container">
-	<h1>Página Principal - ASPNET</h1>
-	<hr>
-	<p>Bem vindo ao ASPNET!</p>
+		<h1 class="text-primary">Página Principal - ASPNET</h1>
+		<hr>
+		<p>Bem vindo ao ASPNET!</p>
+		<a href="Home/Cadastrar" class="btn btn-primary">Quero me Cadastrar</a>
 	</div>
+		
 </body>
 </html>
