--- a/Views/Home/FormUsuario.cshtml
+++ b/Views/Home/FormUsuario.cshtml
@@ -1,3 +1,6 @@
+@model UsandoViews.Models.Usuario
+@addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
+
 <!DOCTYPE html>
 <html lang="pt-br">
 <head>
@@ -13,12 +16,12 @@
 		<hr>
 		<form action="POST" class="w-25">
 			<div class="form-group">
-				<label for="txtNome">Nome: 	</label><br>
-				<input type="text" name="Nome" id="txtNome" class="form-control" value="@Model.Nome">
+				<label asp-for="Nome">Nome: 	</label><br>
+				<input asp-for="Nome" class="form-control">
 			</div>
 			<div class="form-group">
-				<label for="txtEmail">E-mail: </label><br>
-				<input type="text" name="Email" id="txtEmail" class="form-control" value="@Model.Email">
+				<label asp-for="Email">E-mail: </label><br>
+				<input asp-for="Email" class="form-control">
 			</div>
 			<div class="mt-3">
 				<button type="submit" class="btn btn-primary" >Cadastrar</button>
