Finalização do CRUD de usuario

--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -10,10 +10,10 @@
 <body>
 	
 	<div class="container">
-		<h1 class="text-primary">Página Principal - ASPNET</h1>
+		<h1 class="text-primary">CRUD COM ASP.NET</h1>
 		<hr>
 		<p>Bem vindo ao ASPNET!</p>
-		<a href="Home/Cadastrar" class="btn btn-primary">Quero me Cadastrar</a>
+		<a href="/Home/Usuarios" class="btn btn-primary">Usuarios</a>
 	</div>
 		
 </body>
