--- a/Views/Home/Excluir.cshtml
+++ b/Views/Home/Excluir.cshtml
@@ -1,30 +1,16 @@
-@model UsandoViews.Models.Usuario
-@addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
+@model Usuario
+@{
+	ViewBag.Subtitulo = "Exclusão";
+}
 
-<!DOCTYPE html>
-<html lang="pt-br">
-<head>
-	<meta charset="UTF-8">
-	<meta http-equiv="X-UA-Compatible" content="IE=edge">
-	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<link rel="stylesheet" href="/lib/bootstrap5/dist/css/bootstrap.css">
-	<title>UsandoViews :: Excluir</title>
-</head>
-<body>
-	<div class="container">
-		<h1 class="text-primary">Cadastro de Usuário</h1>
-		<hr>
-		<h4>Deseja realmente excluir o usuário <span class="text-danger">@Model.Nome?</span></h4>
-		<form method="POST" class="w-25">
-			<input type="hidden" asp-for="IdUsuario">
-			
-			<div class="mt-3">
-				<a asp-action="Usuarios" class="btn btn-secondary" >Não (Cancelar)</a>
-				<button class="btn btn-danger">Sim (Excluir)</button>
-			</div>
-		</form>
-	</div>
+<h1 class="text-primary">Cadastro de Usuário</h1>
+<hr>
+<h4>Deseja realmente excluir o usuário <span class="text-danger">@Model.Nome?</span></h4>
+<form method="POST" class="w-25">
+	<input type="hidden" asp-for="IdUsuario">
 	
-		
-</body>
-</html>
+	<div class="mt-3">
+		<a asp-action="Usuarios" class="btn btn-secondary" >Não (Cancelar)</a>
+		<button class="btn btn-danger">Sim (Excluir)</button>
+	</div>
+</form>
