--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -1,20 +1,8 @@
-<!DOCTYPE html>
-<html lang="pt-br">
-<head>
-	<meta charset="UTF-8">
-	<meta http-equiv="X-UA-Compatible" content="IE=edge">
-	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<link rel="stylesheet" href="/lib/bootstrap5/dist/css/bootstrap.css">
-	<title>UsandoViews :: Index</title>
-</head>
-<body>
-	
-	<div class="container">
-		<h1 class="text-primary">CRUD COM ASP.NET</h1>
-		<hr>
-		<p>Bem vindo ao ASPNET!</p>
-		<a href="/Home/Usuarios" class="btn btn-primary">Usuarios</a>
-	</div>
-		
-</body>
-</html>
+@{
+	ViewBag.Subtitulo = "Página Principal";
+}
+<h1 class="text-primary">CRUD COM ASP.NET</h1>
+<hr>
+<h3 class="text-info">Usuários cadastrados: @ViewBag.QtdeUsuarios</h3>
+<hr>
+<a href="/Home/Usuarios" class="btn btn-primary">Usuarios</a>
