Views Parciais, section, alerta e icons

--- a/Views/Home/Cadastrar.cshtml
+++ b/Views/Home/Cadastrar.cshtml
@@ -20,3 +20,11 @@
 		<a href="/Home/Usuarios" class="btn btn-light">Cancelar</button></a> 
 	</div>
 </form>
+
+@section Footer {
+	<div class="text-info">Cadastro</div>
+}
+
+@section LogoPagina{
+	<img src="/img/edit_user.png" height="24" class="d-inline-block align-text-bottom" alt="" srcset="">
+}
