--- a/Views/Home/Excluir.cshtml
+++ b/Views/Home/Excluir.cshtml
@@ -10,7 +10,15 @@
 	<input type="hidden" asp-for="IdUsuario">
 	
 	<div class="mt-3">
-		<a asp-action="Usuarios" class="btn btn-secondary" >Não (Cancelar)</a>
-		<button class="btn btn-danger">Sim (Excluir)</button>
+		<a asp-action="Usuarios" class="btn btn-secondary" >Não</a>
+		<button class="btn btn-danger">Sim</button>
 	</div>
 </form>
+
+@section Footer {
+	<div class="text-info">Exclusão</div>
+}
+
+@section LogoPagina{
+	<img src="/img/remove_user.png" height="24" class="d-inline-block align-text-bottom" alt="" srcset="">
+}
