--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -6,3 +6,7 @@
 <h3 class="text-info">Usuários cadastrados: @ViewBag.QtdeUsuarios</h3>
 <hr>
 <a href="/Home/Usuarios" class="btn btn-primary">Usuarios</a>
+
+@section Footer {
+	<div class="text-info">Página Principal</div>
+}
