--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -14,7 +14,17 @@
 <body>
 	<nav class="navbar navbar-expand-lg bg-dark navbar-dark">
 		<div class="container">
-			<a class="navbar-brand" href="#">Controle de usuários</a>
+			<a class="navbar-brand" href="#">
+				@if (IsSectionDefined("LogoPagina"))
+				{
+					@RenderSection("LogoPagina", false)
+				}
+				else
+				{
+					<img src="/img/page.png" height="24" class="d-inline-block align-text-bottom" alt="" srcset="">
+				}
+				Controle de usuários
+			</a>
 			<button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarMain">
 			<span class="navbar-toggler-icon"></span>
 			</button>
@@ -27,9 +37,16 @@
 			</div>
 		</div>
 	</nav>
+
 	<div class="container mt-2">
 		@RenderBody()
 	</div>
-		
+
+	<div class="text-light bg-dark text-center p-3 fixed-bottom">
+		Todos os direitos reservados &#174; - 2022
+		@RenderSection("Footer", false)
+	</div>
+
+	@RenderSection("Scripts", false)
 </body>
 </html>
